Fix broken style

--- a/src/swiper.css
+++ b/src/swiper.css
@@ -4,6 +4,7 @@
   position: relative;
   overflow: hidden;
   list-style: none;
+  width: 100vw;
 }
 .swiper-container-vertical > .swiper-wrapper {
   flex-direction: column;
